{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 324,
  "lineage": "2b275427-fd7b-3d88-8388-cb8c691d236b",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:subnet/subnet-05a73763c7b6cc1a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.222.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a73763c7b6cc1a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "594311320189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "kkhdevs-public-001/az1",
              "Owner": "kkhdevs",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "kkhdevs-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-08d97d7138f25344d"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-305178151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-087e2be720c572c57",
            "self": false,
            "source_security_group_id": "sg-08082abf20a87baa6",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-3262429441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-087e2be720c572c57",
            "self": false,
            "source_security_group_id": "sg-0d17f4f30f351416e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-0ab0b3f7a075d2117",
            "description": "Security Group for EKS Control Plane.",
            "egress": [],
            "id": "sg-0ab0b3f7a075d2117",
            "ingress": [],
            "name": "eks-kkhdevs-cluster-control-plane",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kkhdevs-cluster-control-plane",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-kkhdevs-cluster-control-plane",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d97d7138f25344d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ephemeral/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with nodes.",
            "from_port": 1025,
            "id": "sgrule-2182631792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab0b3f7a075d2117",
            "self": false,
            "source_security_group_id": "sg-08082abf20a87baa6",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with pods.",
            "from_port": 1025,
            "id": "sgrule-1381781078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab0b3f7a075d2117",
            "self": false,
            "source_security_group_id": "sg-0d17f4f30f351416e",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster-api/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-1152756419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab0b3f7a075d2117",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-3299615271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab0b3f7a075d2117",
            "self": false,
            "source_security_group_id": "sg-08082abf20a87baa6",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-350764289",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab0b3f7a075d2117",
            "self": false,
            "source_security_group_id": "sg-0d17f4f30f351416e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-08082abf20a87baa6",
            "description": "Security Group for all nodes in the EKS cluster.",
            "egress": [],
            "id": "sg-08082abf20a87baa6",
            "ingress": [],
            "name": "eks-kkhdevs-cluster-node",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kkhdevs-cluster-node",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-kkhdevs-cluster-node",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d97d7138f25344d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3381256458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes egress access to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-4128016573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-087e2be720c572c57",
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-4190698722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-087e2be720c572c57",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate each others.",
            "from_port": 0,
            "id": "sgrule-949332854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2790616795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-0ab0b3f7a075d2117",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the cluster control plane for kubelet.",
            "from_port": 10250,
            "id": "sgrule-1106151250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-0ab0b3f7a075d2117",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the pods for kubelet.",
            "from_port": 10250,
            "id": "sgrule-2824474524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-0d17f4f30f351416e",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "node-exporter/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the pods for node-exporter.",
            "from_port": 9100,
            "id": "sgrule-3252296968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08082abf20a87baa6",
            "self": false,
            "source_security_group_id": "sg-0d17f4f30f351416e",
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-0d17f4f30f351416e",
            "description": "Security Group for all pods in the EKS cluster.",
            "egress": [],
            "id": "sg-0d17f4f30f351416e",
            "ingress": [],
            "name": "eks-kkhdevs-cluster-pod",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kkhdevs-cluster-pod",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-kkhdevs-cluster-pod",
              "kubernetes.io/cluster/kkhdevs-cluster": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "kkhdevs-cluster",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d97d7138f25344d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-283575254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-3483030453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": false,
            "source_security_group_id": "sg-087e2be720c572c57",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate from the nodes.",
            "from_port": 0,
            "id": "sgrule-247956513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": false,
            "source_security_group_id": "sg-08082abf20a87baa6",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate each others.",
            "from_port": 0,
            "id": "sgrule-3733166855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-454576484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": false,
            "source_security_group_id": "sg-0ab0b3f7a075d2117",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "metrics-server/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to receive metrics-server communication from the cluster control plane.",
            "from_port": 443,
            "id": "sgrule-415884534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d17f4f30f351416e",
            "self": false,
            "source_security_group_id": "sg-0ab0b3f7a075d2117",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594311320189:security-group/sg-0ff216f387e7bc768",
            "description": "Security group for EKS nodes.",
            "egress": [],
            "id": "sg-0ff216f387e7bc768",
            "ingress": [],
            "name": "kkhdevs-cluster-node-user",
            "name_prefix": "",
            "owner_id": "594311320189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kkhdevs-cluster-node-user",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "kkhdevs-cluster-node-user",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "kkhdevs-cluster-node-user",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "kkhdevs-cluster-node-user",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d97d7138f25344d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-3071796078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ff216f387e7bc768",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ssh/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with MySQL Server.",
            "from_port": 22,
            "id": "sgrule-339362428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff216f387e7bc768",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}